Move Roda Tree to separate abstraction layer; add sequel to the project; add rake tasks for DB create & destroy; add db setup to application bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@
 
 # Ignore environment-specific config
 .env*
+
+# Ignore local database settings
+config/database.yml
+
+# Ignore docker-compose for now
+docker-compose.yml
