Setup docker-compose production settings

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ config/database.yml
 
 # Ignore docker-compose for now
 docker-compose.yml
+
+# Ignore production docker-compose setup
+docker-compose.yml.release
