Require gems to be installed before tests launch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,6 @@ workflows:
   build-test-push:
     jobs:
       - bundle-install
-      - run-tests
+      - run-tests:
+          requires:
+            - bundle-install
