--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           echo 'DB_TIMEOUT=30' >> .env.test
       - persist_to_workspace:
           root: .
-          path: .
+          path: .env.test
 
   run_tests:
     working_directory: ~/repo
