--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,14 @@ jobs:
           DB_HOST: 0.0.0.0
           DB_PORT: 5432
           DB_USER: postgres
+          DB_PASSWORD: 12345678
           DB_TIMEOUT: 30
     steps:
       - checkout
       - attach_workspace:
           at: ~/repo
       - run: bundle install
+      - run: mv config/database.yml.circleci config/database.yml
       - run: bundle exec rspec spec
 
 workflows:
