--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           DB_USER: postgres
           DB_PASSWORD: 12345678
           DB_TIMEOUT: 30
+          RACK_ENV: test
       - image: circleci/postgres:11.4-alpine
         environment:
           POSTGRES_USER: postgres
@@ -49,6 +50,7 @@ jobs:
           at: ~/repo
       - run: bundle install
       - run: mv config/database.yml.circleci config/database.yml
+      - run: rake db:migrate
       - run: bundle exec rspec spec
 
 workflows:
