--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run: bundle install
-      - run: mv config/database.yml.circleci config/database.yml
+      - run: mv ./database.yml.test.circleci config/database.yml
       - run: bundle exec rake db:migrate
       - run: bundle exec rspec spec
 
