--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,8 @@ jobs:
       - run: bundle exec rspec spec
 
   build_and_push_image:
-    machine: true
+    machine:
+      docker_layer_caching: true
     working_directory: ~/repo
     steps:
       - checkout
