--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,7 @@ jobs:
       - run: bundle exec rspec spec
 
   build_and_push_image:
-    machine:
-      docker_layer_caching: true
+    machine: true
     working_directory: ~/repo
     steps:
       - checkout
